--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://puny-swap-be.herokuapp.com/"
 }
