--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://puny-swap-be.herokuapp.com/"
+  "proxy": "http://localhost:4000/"
 }
