--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.11.0",
     "recharts": "^2.1.9",
+    "svg-parser": "^2.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
