--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.3",
     "moralis": "^1.5.11",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
