--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-spinners": "^0.11.0",
     "recharts": "^2.1.9",
     "svg-parser": "^2.0.4",
+    "sweetalert2": "^11.4.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
