--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "mv build ../PunySwapBE/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,5 +51,4 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://puny-swap-be.herokuapp.com/"
 }
