Changing file name

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "mv build ../PunySwapBE/",
+    "postbuild": "mv build ../puny-swap-be/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,9 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-<<<<<<< HEAD
-  },
-=======
   }
->>>>>>> 8d5eb7b70ab2c035d3f74bfff2ff590a368d5f5c
 }
